[gd_scene load_steps=51 format=2]

[ext_resource path="res://assets/SpriteSheets/main_char/mc_shadow.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/RatSoldier.gd" type="Script" id=2]
[ext_resource path="res://assets/SpriteSheets/rat soldier/rat_soldier-Sheet_2.png" type="Texture" id=3]
[ext_resource path="res://src/Helpers/CustomParticles.gd" type="Script" id=4]
[ext_resource path="res://assets/SpriteSheets/hit markers/Effect 3 - Sprite Sheet.png" type="Texture" id=5]
[ext_resource path="res://src/Helpers/Spawning/LootSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/SpriteSheets/hit markers/hits2-Sheet.png" type="Texture" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 5
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.4
anim_speed = 1.0

[sub_resource type="CanvasItemMaterial" id=3]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.3
anim_speed = 2.0

[sub_resource type="Animation" id=5]
length = 3.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dispose"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack/AttackBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicSprite/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 48, 1 ]
}

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack/AttackBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_attack_done"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "spawn"
length = 2.125
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.375, 0.5, 0.630551, 0.755551, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95 ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37 ]
}

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "jump_attack"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "spawn"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=36]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachine" id=38]
states/die/node = SubResource( 11 )
states/die/position = Vector2( 567, 50 )
states/hurt/node = SubResource( 12 )
states/hurt/position = Vector2( 280, 168 )
states/idle/node = SubResource( 13 )
states/idle/position = Vector2( 265, 50 )
states/jump_attack/node = SubResource( 14 )
states/jump_attack/position = Vector2( 581, 168 )
states/spawn/node = SubResource( 15 )
states/spawn/position = Vector2( 108.259, 50 )
states/walk/node = SubResource( 16 )
states/walk/position = Vector2( 385.259, -38 )
transitions = [ "idle", "hurt", SubResource( 17 ), "hurt", "idle", SubResource( 18 ), "hurt", "die", SubResource( 19 ), "die", "hurt", SubResource( 20 ), "idle", "die", SubResource( 21 ), "die", "idle", SubResource( 22 ), "hurt", "jump_attack", SubResource( 23 ), "jump_attack", "idle", SubResource( 24 ), "idle", "jump_attack", SubResource( 25 ), "jump_attack", "die", SubResource( 26 ), "jump_attack", "hurt", SubResource( 27 ), "die", "jump_attack", SubResource( 28 ), "idle", "walk", SubResource( 29 ), "walk", "idle", SubResource( 30 ), "walk", "die", SubResource( 31 ), "walk", "hurt", SubResource( 32 ), "walk", "jump_attack", SubResource( 33 ), "hurt", "walk", SubResource( 34 ), "jump_attack", "walk", SubResource( 35 ), "spawn", "idle", SubResource( 36 ), "idle", "spawn", SubResource( 37 ) ]
start_node = "idle"
end_node = "die"
graph_offset = Vector2( -203.741, -50.4207 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=39]

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 12.0598, 4.39586 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 9.27378, 4 )

[sub_resource type="CircleShape2D" id=42]
radius = 13.2807

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 13.3553, 8.96162 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
position = Vector2( -5, -1 )
z_as_relative = false
collision_layer = 1024
collision_mask = 7
script = ExtResource( 2 )

[node name="KinematicSprite" type="KinematicBody2D" parent="."]

[node name="PunchHitMarkerParticles" type="Particles2D" parent="KinematicSprite"]
material = SubResource( 1 )
position = Vector2( 0.422842, -17.8965 )
scale = Vector2( 3, 3 )
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
fixed_fps = 8
process_material = SubResource( 2 )
texture = ExtResource( 5 )
script = ExtResource( 4 )

[node name="KickHitMarkerParticles" type="Particles2D" parent="KinematicSprite"]
material = SubResource( 3 )
position = Vector2( -1.24923, -24.3937 )
scale = Vector2( 3, 3 )
emitting = false
amount = 1
lifetime = 0.7
one_shot = true
fixed_fps = 10
process_material = SubResource( 4 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="KinematicSprite"]
position = Vector2( 0, -8.795 )
z_as_relative = false
texture = ExtResource( 3 )
offset = Vector2( 0, -15 )
hframes = 16
vframes = 6
frame = 1

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 5.05412, -0.230137 )
scale = Vector2( 0.585947, 0.636373 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 5 )
anims/hurt = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/jump_attack = SubResource( 8 )
anims/spawn = SubResource( 9 )
anims/walk = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 38 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 39 )

[node name="Sight" type="RayCast2D" parent="."]
modulate = Color( 0.054902, 1, 0, 1 )
position = Vector2( 4.98629, -3.79149 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="ObstacleAvoidRaycasts" type="Node2D" parent="."]
position = Vector2( 6.31385, 1.54338 )

[node name="ObstacleAvoidSE" type="RayCast2D" parent="ObstacleAvoidRaycasts"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 7.56071, -1.69039 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="ObstacleAvoidSW" type="RayCast2D" parent="ObstacleAvoidRaycasts"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -10.8816, -1.67607 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="ObstacleAvoidNW" type="RayCast2D" parent="ObstacleAvoidRaycasts"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -10.861, -9.58638 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="ObstacleAvoidNE" type="RayCast2D" parent="ObstacleAvoidRaycasts"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 7.58607, -9.5799 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="HurtBox" type="Area2D" parent="." groups=[
"hurtbox",
]]
position = Vector2( 1.85355, -19.0993 )
collision_layer = 16384
collision_mask = 16

[node name="HurtBoxArea" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -1.72389, 13.2952 )
shape = SubResource( 40 )

[node name="Collider" type="CollisionShape2D" parent="."]
modulate = Color( 0.968627, 1, 0, 1 )
position = Vector2( 4.66372, -4.08509 )
shape = SubResource( 41 )

[node name="FlockBox" type="Area2D" parent="." groups=[
"enemy",
]]
position = Vector2( 1.34099, -4.24269 )
collision_layer = 262144
collision_mask = 262144

[node name="FlockBoxArea" type="CollisionShape2D" parent="FlockBox"]
position = Vector2( 0.520008, 0.414199 )
shape = SubResource( 42 )

[node name="Attack" type="Area2D" parent="."]
modulate = Color( 0.431373, 1, 0, 1 )
position = Vector2( 0.353554, -14.8493 )
collision_layer = 4096
collision_mask = 0

[node name="AttackBox" type="CollisionShape2D" parent="Attack"]
position = Vector2( -18.5933, 5.63175 )
shape = SubResource( 43 )

[node name="LootSpawner" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( -9.6676, -19.0703 )
MinCoins = 0
MaxCoins = 0
PowerupChance = 80

[node name="explosionPosition" type="Position2D" parent="."]
position = Vector2( -4.17138, -14.2661 )

[connection signal="area_entered" from="FlockBox" to="." method="_on_FlockBox_area_entered"]
[connection signal="area_exited" from="FlockBox" to="." method="_on_FlockBox_area_exited"]
[connection signal="area_entered" from="Attack" to="." method="_on_Attack_area_entered"]
